Package as non-modular app for jpackage